Update assistant example

--- a/openai/12_assistant.ipynb
+++ b/openai/12_assistant.ipynb
@@ -39,9 +39,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"data\": [\n",
+      "    {\n",
+      "      \"id\": \"msg_JVll8GQ1SyerRL5ZrgpDpqsD\",\n",
+      "      \"assistant_id\": \"asst_KyEGjGRx3Eg800EMlic078Kx\",\n",
+      "      \"content\": [\n",
+      "        {\n",
+      "          \"text\": {\n",
+      "            \"annotations\": [],\n",
+      "            \"value\": \"The solution to the equation \\\\(3x + 11 = 14\\\\) is \\\\(x = 1\\\\).\"\n",
+      "          },\n",
+      "          \"type\": \"text\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"created_at\": 1707273798,\n",
+      "      \"file_ids\": [],\n",
+      "      \"metadata\": {},\n",
+      "      \"object\": \"thread.message\",\n",
+      "      \"role\": \"assistant\",\n",
+      "      \"run_id\": \"run_VddilsoKqhqSE2JOapPiTkjh\",\n",
+      "      \"thread_id\": \"thread_Tk6cdzJrLtb93rHwjPhp2bem\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"id\": \"msg_XPIDjHia8Ww03NakMAaU8kFC\",\n",
+      "      \"assistant_id\": null,\n",
+      "      \"content\": [\n",
+      "        {\n",
+      "          \"text\": {\n",
+      "            \"annotations\": [],\n",
+      "            \"value\": \"I need to solve the equation `3x + 11 = 14`. Can you help me?\"\n",
+      "          },\n",
+      "          \"type\": \"text\"\n",
+      "        }\n",
+      "      ],\n",
+      "      \"created_at\": 1707273792,\n",
+      "      \"file_ids\": [],\n",
+      "      \"metadata\": {},\n",
+      "      \"object\": \"thread.message\",\n",
+      "      \"role\": \"user\",\n",
+      "      \"run_id\": null,\n",
+      "      \"thread_id\": \"thread_Tk6cdzJrLtb93rHwjPhp2bem\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"object\": \"list\",\n",
+      "  \"first_id\": \"msg_JVll8GQ1SyerRL5ZrgpDpqsD\",\n",
+      "  \"last_id\": \"msg_XPIDjHia8Ww03NakMAaU8kFC\",\n",
+      "  \"has_more\": false\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an assistant\n",
     "assistant = client.beta.assistants.create(\n",
