--- a/langchain/ai_researcher.ipynb
+++ b/langchain/ai_researcher.ipynb
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "result = research_report_chain.invoke({\"question\": \"Generative AI insurance use cases\"})\n",
+    "result = research_report_chain.invoke({\"question\": \"Can I have multiple expressroute circuits in same peering location\"})\n",
     "display(Markdown(result))"
    ]
   }
