Update storm example

--- a/langgraph/ai_research.ipynb
+++ b/langgraph/ai_research.ipynb
@@ -13,6 +13,10 @@
     "1. Creating an outline (planning) by querying similar topics helps improve coverage.\n",
     "2. Multi-perspective, grounded (in search) conversation simulation helps increase the reference count and information density. \n",
     "\n",
+    "The control flow looks like the diagram below.\n",
+    "\n",
+    "![STORM diagram](./images/storm.png)\n",
+    "\n",
     "STORM has a few main stages:\n",
     "\n",
     "1. Generate initial outline + Survey related subjects\n",
