Add a few of examples

--- a/langgraph/ai_research.ipynb
+++ b/langgraph/ai_research.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The control flow looks like the diagram below.\n",
     "\n",
-    "![STORM diagram](./images/storm.png)\n",
+    "![STORM diagram](./img/storm.png)\n",
     "\n",
     "STORM has a few main stages:\n",
     "\n",
