--- a/langchain/ai_research.ipynb
+++ b/langchain/ai_research.ipynb
@@ -64,7 +64,7 @@
     "    [\n",
     "        (\n",
     "            \"user\",\n",
-    "            \"Write 3 google search queries to search online that form an \"\n",
+    "            \"Write 3 search queries to search online that form an \"\n",
     "            \"objective opinion from the following: {question}\\n\"\n",
     "            \"You must respond with a list of strings in array: \"\n",
     "            '[\"query 1\", \"query 2\", \"query 3\"].',\n",
@@ -162,90 +162,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))\n"
-     ]
-    },
-    {
      "data": {
       "text/markdown": [
-       "# Report on Generative AI Insurance Use Cases\n",
+       "# Report on Provisioning Azure Resources by Creating a GitHub Issue\n",
        "\n",
        "## Introduction\n",
-       "Generative AI, also known as Generative Adversarial Networks (GANs), has been making significant strides in various industries, including insurance. This report aims to explore the use cases of generative AI in the insurance sector, highlighting its benefits, challenges, and future prospects.\n",
        "\n",
-       "## Benefits of Generative AI in Insurance\n",
-       "Generative AI offers several benefits when applied in the insurance industry. These benefits include:\n",
+       "Provisioning Azure resources using GitHub issues is a crucial aspect of modern software development workflows. GitHub issues provide a convenient way to track tasks, enhancements, and bugs for software projects. In the context of Azure resource provisioning, GitHub issues can be leveraged to automate the creation of Azure resources, such as resource groups, storage accounts, and machine learning workspaces. This report aims to explore the various methods and best practices for provisioning Azure resources by creating a GitHub issue, based on the information gathered from reputable sources.\n",
        "\n",
-       "### Claims Processing Automation\n",
-       "Generative AI can automate and streamline the claims processing workflow, leading to faster and more accurate claim settlements. By analyzing historical data and patterns, generative AI can assist in identifying fraudulent claims and processing legitimate claims efficiently.\n",
+       "## Methods for Provisioning Azure Resources via GitHub Issues\n",
        "\n",
-       "### Product Development Assistance\n",
-       "By analyzing customer feedback and market trends, generative AI can provide valuable insights to insurance companies for developing new and innovative insurance products. This can lead to enhanced customer satisfaction and competitive advantage in the market.\n",
+       "### Using Azure Login Action with OpenID Connect in GitHub Actions Workflow\n",
        "\n",
-       "### Regulatory Compliance\n",
-       "Generative AI can assist insurance companies in ensuring compliance with regulatory requirements. By analyzing vast amounts of data and identifying potential compliance issues, generative AI can help companies adhere to data protection laws, privacy regulations, and industry standards.\n",
+       "One method for provisioning Azure resources using GitHub issues involves utilizing the Azure login action with OpenID Connect in a GitHub Actions workflow. This approach requires creating a Microsoft Entra application and service principal, assigning a role to the application, adding federated credentials, and creating GitHub secrets for the application's Client ID, Tenant ID, and Subscription ID. By following this method, developers can authenticate with Azure and interact with Azure resources using GitHub issues (Microsoft, n.d. a).\n",
        "\n",
-       "## Use Cases of Generative AI in Insurance\n",
-       "Generative AI can be applied to various use cases within the insurance industry, including:\n",
+       "### Creating Workflows in GitHub Repository\n",
        "\n",
-       "### Customer Service and Support\n",
-       "Generative AI can be used to develop virtual assistants and chatbots that can provide personalized customer support, answer queries, and assist in policy management. This can lead to improved customer experience and operational efficiency.\n",
+       "Another approach to provisioning Azure resources through GitHub involves creating workflows in the repository to build, test, package, release, and deploy to Azure using GitHub Actions for Azure. These workflows can be set up to automate the provisioning of Azure services such as Azure App Service, Azure Functions, and Azure Key Vault. This method requires Azure and GitHub accounts, and developers can use a service principal or publish profile to connect to Azure from GitHub (Microsoft, n.d. b).\n",
        "\n",
-       "### Policy Recommendations\n",
-       "By analyzing customer data and preferences, generative AI can provide personalized policy recommendations tailored to individual needs and risk profiles. This can enhance customer satisfaction and retention.\n",
+       "### Creating a Service Principal and Using Azure CLI Task in GitHub Actions\n",
        "\n",
-       "### Risk Prediction and Prevention\n",
-       "Generative AI can analyze historical data and patterns to predict and prevent potential risks, such as fraud, accidents, and natural disasters. This proactive approach can help insurance companies mitigate risks and minimize losses.\n",
+       "To provision Azure resources using GitHub, it is essential to create a service principal with a contributor role assigned at the subscription level. Subsequently, developers can use the Azure CLI task in GitHub actions to create the desired resources, such as a resource group and a Machine Learning workspace. It is crucial to add the necessary inline scripts in the GitHub workflow file to create the resources and configure the Azure ML workspace (Stack Overflow, n.d.).\n",
        "\n",
-       "### Customer Retention and Loyalty\n",
-       "Generative AI can analyze customer behavior and preferences to develop targeted retention strategies. By offering personalized incentives and services, insurance companies can enhance customer loyalty and reduce churn rates.\n",
+       "### Leveraging Terraform and GitHub Actions with Remote Backend\n",
        "\n",
-       "## Challenges of Implementing Generative AI in Insurance\n",
-       "Despite its potential benefits, implementing generative AI in the insurance industry comes with several challenges, including:\n",
+       "A best practice for creating GitHub issues for Azure resource provisioning is to use Terraform to deploy infrastructure to Azure through GitHub Actions with a remote backend. This method allows for deploying infrastructure on Azure by running the appropriate workflow on GitHub, even without elevated permissions in Azure. Additionally, it ensures effective collaboration on the same infrastructure and reduces security risks by following the principle of least privilege (FPG Maas, n.d.).\n",
        "\n",
-       "### Data Quality and Availability\n",
-       "Ensuring the quality, relevance, and availability of data can be challenging due to incomplete or inaccurate data, data silos, and data privacy concerns. Insurance companies need to address these issues to leverage the full potential of generative AI.\n",
+       "### Step-by-Step Guide for Creating Azure Resources through GitHub\n",
        "\n",
-       "### Regulatory Compliance\n",
-       "Compliance with various regulatory requirements, such as data protection laws, privacy regulations, and industry standards, is necessary when implementing generative AI solutions. Ensuring that generative AI models adhere to legal and ethical standards is crucial for successful implementation.\n",
+       "A comprehensive step-by-step guide for creating Azure resources through GitHub includes creating a service principal using the Azure CLI, storing the credentials as secrets in GitHub Actions, deploying the required resources for Terraform's backend, defining the infrastructure using Terraform, and providing a GitHub Actions workflow that deploys the infrastructure using Terraform when a release is published on the main branch (FPG Maas, n.d.).\n",
        "\n",
-       "### Interpretability and Transparency\n",
-       "Generative AI models can be complex and difficult to interpret, leading to challenges in explaining decisions to regulators, customers, and other stakeholders. Ensuring the interpretability and transparency of generative AI models is essential for building trust and acceptance.\n",
+       "## Best Practices for Provisioning Azure Resources via GitHub Issues\n",
        "\n",
-       "### Integration with Legacy Systems\n",
-       "Many insurance companies operate on legacy systems that may not be compatible with generative AI technologies. Integrating generative AI with existing systems can be complex and time-consuming, requiring careful planning and execution.\n",
+       "### Use of Terraform for Infrastructure Deployment\n",
        "\n",
-       "### Ethical and Bias Issues\n",
-       "Generative AI models can inherit biases from the data used to train them, leading to biased decisions and outcomes. Insurance companies need to address ethical and bias issues to ensure fairness and ethical use of generative AI in insurance.\n",
+       "The use of Terraform for infrastructure deployment through GitHub Actions is highlighted as a best practice for provisioning Azure resources. By leveraging Terraform, developers can define and manage infrastructure as code, ensuring consistency and reproducibility in resource provisioning. Additionally, using Terraform with a remote backend allows for effective collaboration and reduces the need for elevated permissions in Azure, thereby enhancing security (FPG Maas, n.d.).\n",
        "\n",
-       "## Future of Generative AI in Insurance\n",
-       "The future of generative AI in the insurance industry holds promising advancements, including:\n",
+       "### Secure Management of Credentials\n",
        "\n",
-       "### Risk Assessment\n",
-       "Generative AI can revolutionize risk assessment by analyzing vast amounts of data to predict and prevent potential risks. This can lead to more accurate underwriting and pricing strategies, ultimately benefiting both insurance companies and policyholders.\n",
+       "When provisioning Azure resources through GitHub issues, it is crucial to securely manage credentials and sensitive information. This includes storing credentials as secrets in GitHub Actions, ensuring that only authorized individuals have access to the necessary credentials for interacting with Azure resources. By following best practices for credential management, developers can mitigate the risk of unauthorized access and potential security breaches (Microsoft, n.d. a).\n",
        "\n",
-       "### Customized Insurance Products\n",
-       "Generative AI can enable the development of highly customized insurance products tailored to individual needs and preferences. This personalized approach can enhance customer satisfaction and loyalty.\n",
+       "### Automation and Standardization\n",
        "\n",
-       "### Data-Driven Decision Making\n",
-       "By leveraging generative AI, insurance companies can make data-driven decisions across various business functions, including underwriting, claims management, and customer service. This can lead to improved operational efficiency and strategic decision-making.\n",
-       "\n",
-       "### Integration with Emerging Technologies\n",
-       "Generative AI can be integrated with emerging technologies, such as blockchain and Internet of Things (IoT), to create innovative insurance solutions. This integration can lead to enhanced security, transparency, and customer experience.\n",
+       "GitHub issues can be leveraged to automate the provisioning of Azure resources, leading to increased efficiency and standardization in the deployment process. By defining workflows and utilizing GitHub Actions, developers can ensure consistent and reliable provisioning of Azure resources across different environments and projects. This promotes a streamlined and scalable approach to resource provisioning, ultimately enhancing the overall development workflow (Microsoft, n.d. b).\n",
        "\n",
        "## Conclusion\n",
-       "Generative AI has the potential to transform the insurance industry by offering various use cases and benefits, including claims processing automation, product development assistance, and regulatory compliance. However, the challenges of implementing generative AI, such as data quality, regulatory compliance, interpretability, integration, and ethical issues, need to be carefully addressed. The future of generative AI in insurance holds promising advancements, including customized insurance products, data-driven decision making, and integration with emerging technologies.\n",
+       "\n",
+       "In conclusion, provisioning Azure resources by creating a GitHub issue involves various methods and best practices that aim to streamline the deployment process, enhance security, and promote collaboration. Leveraging GitHub Actions, service principals, Terraform, and secure credential management are key components of an effective approach to provisioning Azure resources through GitHub issues. By following best practices and utilizing the available tools and workflows, developers can ensure efficient and reliable provisioning of Azure resources while maintaining a high level of security and standardization.\n",
        "\n",
        "## References\n",
-       "- Scaleupally. (n.d.). Generative AI in Insurance. Retrieved from https://scaleupally.io/blog/generative-ai-in-insurance/\n",
-       "- MarketsandMarkets. (n.d.). The Influence of Generative AI on the Insurance Industry. Retrieved from https://www.marketsandmarkets.com/industry-news/The-Influence-Of-Generative-AI-On-The-Insurance-Industry"
+       "\n",
+       "FPG Maas. (n.d.). Azure, Terraform & GitHub Actions. Retrieved from https://www.fpgmaas.com/blog/azure-terraform-github-actions\n",
+       "\n",
+       "Microsoft. (n.d. a). Connect from Azure to GitHub. Retrieved from https://learn.microsoft.com/en-us/azure/developer/github/connect-from-azure\n",
+       "\n",
+       "Microsoft. (n.d. b). GitHub Actions for Azure. Retrieved from https://learn.microsoft.com/en-us/azure/developer/github/github-actions\n",
+       "\n",
+       "Stack Overflow. (n.d.). Creating Azure resource group or Azure ML workspace permission denied using GitHub Actions. Retrieved from https://stackoverflow.com/questions/75976105/creating-azure-resource-group-or-azure-ml-workspace-permission-denied-using-gi"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -256,7 +233,7 @@
     }
    ],
    "source": [
-    "result = research_report_chain.invoke({\"question\": \"Can I have multiple expressroute circuits in same peering location\"})\n",
+    "result = research_report_chain.invoke({\"question\": \"How to provision Azure resources by creating a github issue\"})\n",
     "display(Markdown(result))"
    ]
   }
