--- a/openai/01_getting_started.ipynb
+++ b/openai/01_getting_started.ipynb
@@ -736,67 +736,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: matplotlib in /home/ythuang/venv/lib/python3.10/site-packages (3.8.2)\n",
-            "Requirement already satisfied: plotly in /home/ythuang/venv/lib/python3.10/site-packages (5.18.0)\n",
-            "Requirement already satisfied: scikit-learn in /home/ythuang/venv/lib/python3.10/site-packages (1.4.0)\n",
-            "Requirement already satisfied: pandas in /home/ythuang/venv/lib/python3.10/site-packages (2.2.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (2.8.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (4.47.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (1.4.5)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (3.1.1)\n",
-            "Requirement already satisfied: packaging>=20.0 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (23.2)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (1.2.0)\n",
-            "Requirement already satisfied: pillow>=8 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (10.2.0)\n",
-            "Requirement already satisfied: numpy<2,>=1.21 in /home/ythuang/venv/lib/python3.10/site-packages (from matplotlib) (1.26.2)\n",
-            "Requirement already satisfied: tenacity>=6.2.0 in /home/ythuang/venv/lib/python3.10/site-packages (from plotly) (8.2.3)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/ythuang/venv/lib/python3.10/site-packages (from scikit-learn) (3.2.0)\n",
-            "Requirement already satisfied: scipy>=1.6.0 in /home/ythuang/venv/lib/python3.10/site-packages (from scikit-learn) (1.12.0)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in /home/ythuang/venv/lib/python3.10/site-packages (from scikit-learn) (1.3.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /home/ythuang/venv/lib/python3.10/site-packages (from pandas) (2023.3.post1)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /home/ythuang/venv/lib/python3.10/site-packages (from pandas) (2023.4)\n",
-            "Requirement already satisfied: six>=1.5 in /home/ythuang/venv/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
       "source": [
         "# Dependencies for embeddings_utils\n",
-        "%pip install matplotlib plotly scikit-learn pandas"
+        "%pip install matplotlib plotly scikit-learn pandas --quiet"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {
-        "gather": {
-          "logged": 1674829364153
-        },
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      },
-      "outputs": [],
-      "source": [
-        "from scipy.spatial.distance import cosine"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {
         "gather": {
           "logged": 1674829424097
@@ -1818,21 +1776,33 @@
               " ...]"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "from scipy.spatial.distance import cosine\n",
+        "from openai import AzureOpenAI\n",
+        "import os\n",
+        "from dotenv import load_dotenv\n",
+        "load_dotenv()\n",
+        "\n",
+        "client = AzureOpenAI(\n",
+        "    api_key=os.getenv(\"AZURE_OPENAI_KEY\"),  \n",
+        "    api_version=os.getenv(\"OPENAI_API_VERSION\"),\n",
+        "    azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+        "    )\n",
+        "\n",
         "text = 'the quick brown fox jumped over the lazy dog'\n",
         "model = 'text-embedding-ada-002'\n",
-        "client.embeddings.create(input=text, model=model)\n",
+        "response = client.embeddings.create(input=text, model=model)\n",
         "response.data[0].embedding\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 7,
       "metadata": {
         "gather": {
           "logged": 1674829555255
@@ -1859,6 +1829,8 @@
         }
       ],
       "source": [
+        "import numpy as np\n",
+        "\n",
         "def cosine_similarity(a, b):\n",
         "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))\n",
         "\n",
@@ -1890,7 +1862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 8,
       "metadata": {
         "gather": {
           "logged": 1674831122093
@@ -1963,7 +1935,7 @@
               "2  Boy on meeting Spider-Man: \"It was my favorite...  "
             ]
           },
-          "execution_count": 34,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1987,7 +1959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 9,
       "metadata": {
         "gather": {
           "logged": 1674831294043
@@ -2043,13 +2015,6 @@
         "3 - [OpenAI Studio Examples](https://oai.azure.com/portal)  \n",
         "4 - [[PUBLIC] Best practices for fine-tuning GPT-3 to classify text](https://docs.google.com/document/d/1rqj7dkuvl7Byd5KQPUJRxc19BJt8wo0yHNwK84KfU3Q/edit#)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
