Add resume analysis

--- a/langchain/ai_research.ipynb
+++ b/langchain/ai_research.ipynb
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "result = research_report_chain.invoke({\"question\": \"How to provision Azure resources by creating a github issue\"})\n",
+    "result = research_report_chain.invoke({\"question\": \"help me create an azure ai upscaling plan for cloud solution architect\"})\n",
     "display(Markdown(result))"
    ]
   }
